# cv-intelligence-layer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cpu  PROD_DEPLOY_RUNBOOK.md  SPEC.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  prod_smoke_tests.sh  pyproject.toml
.claude/commands/: implement.md  review.md
.claude/skills/: cv-extraction.md  cv-ranking.md
.cursor/: CLAUDE.md  SPEC.md  cursorrules  cv-ranking.md  review.md
.cursor/rules/: api-routes.mdc  celery-tasks.mdc  llm-prompts.mdc  project.mdc  services.mdc
alembic/: env.py
alembic/versions/: 0001_init.py  0002_webhook_support.py  0003_external_id_required.py  0004_add_external_metadata.py  0004_skillconnect_catalogs.py  0005_drop_skillconnect_profile.py  0006_seed_skillconnect_catalogs.py  0007_fix_corrupted_skill_names.py
app/: config.py  exceptions.py  main.py
docs/: CV_Intelligence_Layer_Solution_Architecture.docx  SETUP_GUIDE.md
e2e_tests/: eval_rank.py  eval_search.py  generate_data.py  run_tests.py
prompts/: answer_scoring.md  cv_entity_extraction.md  cv_ranking.md
schemas/: candidate_profile.json  openapi_cv_layer.yaml
tests/: conftest.py  test_answer_scorer.py  test_api_cv.py  test_catalog_refresh.py  test_catalog_seed.py  test_catalog_store.py  test_cv_search_service.py  test_cv_service.py  test_document_processor.py  test_entity_extractor.py  test_health.py  test_indexing_bridge.py  test_llm_cache.py  test_ocr_service.py  test_ranking_engine.py  test_search_client.py  test_skill_resolver.py  test_skillconnect_client.py  test_webhooks.py
(+43 files in other folders)
